src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_narrow_width_20.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [13.1: backend╮
│● implementing    │
│Short line        │
│This is a much    │
│longer line that  │
│should wrap       │
│OK                │
╰ $0.0123 │ ↓1.2k ↑╯
