src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_narrow_width_30.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W2 [14.2: api] (opus) ─────╮
│◉ verify [lint ✓, test ⏳]  │
│Running verification...     │
│Profile: lint — passed      │
│Profile: test — in progress │
│                            │
│                            │
│                            │
│                            │
╰ $0.4560 │ ↓5.0k ↑3.0k ─────╯
